fix: stop overflow-x by hiding it

--- a/app/_components/header/index.module.css
+++ b/app/_components/header/index.module.css
@@ -5,6 +5,7 @@
   align-items: center;
   padding: 0 var(--size-5);
   text-transform: uppercase;
+  overflow-x: hidden;
 }
 
 .logo {
